<resources>
    <string name="app_name">Everemote</string>
    <string name="lightbulb">Lightbulb</string>
    <string name="pc">PC</string>
    <string name="action_lock">Lock the controls</string>
    <string name="action_select">Choose a device</string>
    <string name="action_settings">Settings</string>
    <string name="tv">TV</string>
    <string name="min_range">Minimum range</string>
    <string name="max_range">Maxmimum range</string>
    <string name="light">Light</string>
    <string name="shutter">Shutter</string>
    <string name="speaker">Speaker</string>
</resources>
